Some fixes, beautifications, structuring, etc.