@@ -12,7 +12,7 @@ import com.github.javaparser.ast.body.*;
 import com.github.javaparser.ast.comments.Comment;
 import com.github.javaparser.ast.expr.AssignExpr;
 import com.github.javaparser.ast.expr.Expression;
-import com.github.javaparser.ast.expr.MethodCallExpr;
+import com.github.javaparser.ast.expr.NameExpr;
 import com.github.javaparser.ast.stmt.BlockStmt;
 import com.github.javaparser.ast.stmt.ExpressionStmt;
 import com.github.javaparser.ast.stmt.Statement;
@@ -25,6 +25,7 @@ import org.reflections.util.ClasspathHelper;
 
 import java.io.FileNotFoundException;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.*;
 
 /**
@@ -52,18 +53,28 @@ public class MainWeaver {
      * @param mainMethodLeft    The name of the main class of the left program
      * @param mainMethodRight   The name of the main class of the right program
      * @param path  The path to the file containing the priority list
-     * @param weaveAuto true means automated method weaving, false only if annotated
-     * @throws InstantiationException When a rule instantion has failed
-     * @throws IllegalAccessException  if a rule or its nullary constructor is not available
-     * @throws FileNotFoundException if the given file could not be found
+     * @param weaveAuto true means automated method weaving,
+     *                  false only if annotated.
+     * @throws InstantiationException When a rule instantiation has failed.
+     * @throws IllegalAccessException if a rule or its nullary constructor
+     *                                is not available.
+     * @throws FileNotFoundException if the given file could not be found.
      */
-    public MainWeaver(String addL, String addR, String mainMethodLeft, String mainMethodRight, String path, boolean weaveAuto)
-            throws InstantiationException, IllegalAccessException, FileNotFoundException {
+    public MainWeaver(String addL, String addR,
+                      String mainMethodLeft,
+                      String mainMethodRight,
+                      String path, boolean weaveAuto)
+            throws InstantiationException, IllegalAccessException,
+                   FileNotFoundException {
         this.additionL = addL;
         this.additionR = addR;
         this.mainMethodLName = mainMethodLeft;
         this.mainMethodRName = mainMethodRight;
-        this.weavingRules = getRules();
+        try { this.weavingRules = getRules(); }
+        catch (IllegalArgumentException e) { }
+        catch (InvocationTargetException e) { }
+        catch (NoSuchMethodException e) { }
+        catch (SecurityException e) { }
         FileHandler fh = new FileHandler();
         this.priorityList = fh.getPriorityList(path);
         this.methodWeavingAutomated = weaveAuto;
@@ -76,32 +87,43 @@ public class MainWeaver {
      * @param addR  The suffix for the right program
      * @param mainMethodLeft    The name of the main class of the left program
      * @param mainMethodRight   The name of the main class of the right program
-     * @throws InstantiationException When a rule instantion has failed
-     * @throws IllegalAccessException  if a rule or its nullary constructor is not available
-     * @throws IOException if an I/O-Exception has occurred or the ressource could not be found.
+     * @throws InstantiationException When a rule instantiation has failed.
+     * @throws IllegalAccessException if a rule or its nullary constructor
+     *                                is not available.
+     * @throws IOException if an I/O-Exception has occurred or the resource
+     *                     could not be found.
      */
-    public MainWeaver(String addL, String addR, String mainMethodLeft, String mainMethodRight)
-            throws InstantiationException, IllegalAccessException, IOException {
+    public MainWeaver(String addL, String addR,
+                      String mainMethodLeft,
+                      String mainMethodRight)
+            throws InstantiationException, IllegalAccessException,
+                   IOException {
         this.additionL = addL;
         this.additionR = addR;
         this.mainMethodLName = mainMethodLeft;
         this.mainMethodRName = mainMethodRight;
-        this.weavingRules = getRules();
+        try { this.weavingRules = getRules(); }
+        catch (IllegalArgumentException e) { }
+        catch (InvocationTargetException e) { }
+        catch (NoSuchMethodException e) { }
+        catch (SecurityException e) { }
         FileHandler fh = new FileHandler();
         this.priorityList = fh.getPriorityList();
         this.methodWeavingAutomated = false;
-        this.allDeclaredMethods = new LinkedList();
+        this.allDeclaredMethods = new LinkedList<String>();
     }
     /**
-     * A constructor which defines only the suffixes for the inputprograms.
+     * A constructor which defines only the suffixes for the input programs.
      * Defaults the main method names to 'main'.
      * Defaults the priority list.
      * Collects all weaving rules present.
      * @param addL  The suffix for the left program
      * @param addR  The suffix for the right program
-     * @throws InstantiationException When a rule instantion has failed
-     * @throws IllegalAccessException  if a rule or its nullary constructor is not available
-     * @throws IOException if an I/O-Exception has occurred or the ressource could not be found.
+     * @throws InstantiationException When a rule instantiation has failed.
+     * @throws IllegalAccessException if a rule or its nullary constructor
+     *                                is not available.
+     * @throws IOException if an I/O-Exception has occurred or the resource
+     *                     could not be found.
      */
     public MainWeaver(String addL, String addR) throws InstantiationException,
             IllegalAccessException, IOException {
@@ -109,27 +131,39 @@ public class MainWeaver {
         this.additionR = addR;
         this.mainMethodLName = "main";
         this.mainMethodRName = "main";
-        this.weavingRules = getRules();
+        try { this.weavingRules = getRules(); }
+        catch (IllegalArgumentException e) { }
+        catch (InvocationTargetException e) { }
+        catch (NoSuchMethodException e) { }
+        catch (SecurityException e) { }
         FileHandler fh = new FileHandler();
         this.priorityList = fh.getPriorityList();
         this.methodWeavingAutomated = false;
     }
 
     /**
-     * The default constructor, assumes the left suffix is '_1' and the right suffix is '_2'.
+     * The default constructor, assumes the left suffix is '_1' and
+     * the right suffix is '_2'.
      * Defaults the main method names to 'main'.
      * Defaults the priority list.
      * Collects all weaving rules present
-     * @throws InstantiationException When a rule instantion has failed
-     * @throws IllegalAccessException  if a rule or its nullary constructor is not available
-     * @throws IOException if an I/O-Exception has occurred or the ressource could not be found.
+     * @throws InstantiationException When a rule instantiation has failed
+     * @throws IllegalAccessException if a rule or its nullary constructor is
+     *                                not available
+     * @throws IOException if an I/O-Exception has occurred or the resource
+     *                     could not be found.
      */
-    public MainWeaver() throws InstantiationException, IllegalAccessException, IOException {
+    public MainWeaver() throws InstantiationException, IllegalAccessException,
+                               IOException {
         this.additionL = "_1";
         this.additionR = "_2";
         this.mainMethodLName = "main";
         this.mainMethodRName = "main";
-        this.weavingRules = getRules();
+        try { this.weavingRules = getRules(); }
+        catch (IllegalArgumentException e) { }
+        catch (InvocationTargetException e) { }
+        catch (NoSuchMethodException e) { }
+        catch (SecurityException e) { }
         FileHandler fh = new FileHandler();
         this.priorityList = fh.getPriorityList();
         this.methodWeavingAutomated = false;
@@ -141,7 +175,8 @@ public class MainWeaver {
      * @param rightIn The right program as CompilationUnit
      * @return  The Product Program as CompilationUnit
      */
-    public CompilationUnit initiateWeave(CompilationUnit leftIn, CompilationUnit rightIn)
+    public CompilationUnit initiateWeave(CompilationUnit leftIn,
+                                         CompilationUnit rightIn)
             throws WeaveException {
         //Clone input
         CompilationUnit left = leftIn.clone();
@@ -156,30 +191,44 @@ public class MainWeaver {
 
         //Extract the names of all methods defined in both compilation units
         //(needed for method weaving)
-        this.allDeclaredMethods = new LinkedList();
+        this.allDeclaredMethods = new LinkedList<String>();
         this.allDeclaredMethods.addAll(getDeclaredMethods(left));
         this.allDeclaredMethods.addAll(getDeclaredMethods(right));
-        //Extract the names of the main classes and remove ".java", add the suffix from the renamingprocess
-        String leftMainClassName = left.getStorage().get().getFileName().toString();
-        leftMainClassName = leftMainClassName.substring(0, leftMainClassName.length() - 5) + this.additionL;
-        String rightMainClassName = right.getStorage().get().getFileName().toString();
-        rightMainClassName = rightMainClassName.substring(0, rightMainClassName.length() - 5) + this.additionR;
+        //Extract the names of the main classes and remove ".java",
+        // add the suffix from the renaming process
+        String leftMainClassName =
+                left.getStorage().get().getFileName().toString();
+        leftMainClassName =
+                leftMainClassName.substring(0,
+                                            leftMainClassName.length() - 5)
+                                            + this.additionL;
+        String rightMainClassName =
+                right.getStorage().get().getFileName().toString();
+        rightMainClassName =
+                rightMainClassName.substring(0,
+                                             rightMainClassName.length() - 5)
+                                             + this.additionR;
 
         retCu = new CompilationUnit();
         //Add all imports
         addImports(retCu, left);
         addImports(retCu, right);
 
-        //Add all classes(including main classes, since self instantiation is possible)
+        //Add all classes (including main classes,
+        //                 since self instantiation is possible)
         addAllClasses(retCu, left);
         addAllClasses(retCu, right);
 
         //find the main classes and process them
         retMainClassName = leftMainClassName + "_x_" + rightMainClassName;
         retCu.addClass(retMainClassName);
-        ClassOrInterfaceDeclaration retMainClass = retCu.getClassByName(leftMainClassName + "_x_" + rightMainClassName).get();
-        ClassOrInterfaceDeclaration leftMainClass = left.getClassByName(leftMainClassName).get();
-        ClassOrInterfaceDeclaration rightMainClass = right.getClassByName(rightMainClassName).get();
+        ClassOrInterfaceDeclaration retMainClass =
+                retCu.getClassByName(leftMainClassName + "_x_" +
+                                     rightMainClassName).get();
+        ClassOrInterfaceDeclaration leftMainClass =
+                left.getClassByName(leftMainClassName).get();
+        ClassOrInterfaceDeclaration rightMainClass =
+                right.getClassByName(rightMainClassName).get();
 
         //Check if all modifiers are supported
         //if one is strict, the output will be strict
@@ -200,14 +249,19 @@ public class MainWeaver {
         }
 
         //get the and call the weave function to generate its body
-        //adds all members except and the main method to the product classes body, and extract the main methods
-        MethodDeclaration mainMethodL = addMembersAndReturnMainMethod(retMainClass, leftMainClass, mainMethodLName + additionL);
-        MethodDeclaration mainMethodR = addMembersAndReturnMainMethod(retMainClass, rightMainClass, mainMethodRName + additionR);
+        //adds all members except and the main method to the
+        // product classes body, and extract the main methods.
+        MethodDeclaration mainMethodL =
+                addMembersAndReturnMainMethod(retMainClass, leftMainClass,
+                                              mainMethodLName + additionL);
+        MethodDeclaration mainMethodR =
+                addMembersAndReturnMainMethod(retMainClass, rightMainClass,
+                                              mainMethodRName + additionR);
         MethodDeclaration retMainMethod = new MethodDeclaration();
 
         //Throw exception if mainMethods could not be found
-        //this should never be the case, as the presence of the methods are checked
-        //when their name is given by the user
+        //this should never be the case, as the presence of
+        //the methods are checked when their name is given by the user
         if((mainMethodL == null) && (mainMethodR == null)) {
             String exMessage = "Neither main method could be found.";
             exMessage = exMessage + "\nWeaving aborted.";
@@ -224,11 +278,13 @@ public class MainWeaver {
 
         //Adds the modifiers of the main methods if they match
         if(mainMethodL.isStatic() && !mainMethodR.isStatic()) {
-            String exMessage = "Either both classes or no class can be static.";
+            String exMessage =
+                    "Either both classes or no class can be static.";
             exMessage = exMessage + "\nWeaving aborted.";
             throw new WeaveException(exMessage);
         } else if (!mainMethodL.isStatic() && mainMethodR.isStatic()) {
-            String exMessage = "Either both classes or no class can be static.";
+            String exMessage =
+                    "Either both classes or no class can be static.";
             exMessage = exMessage + "\nWeaving aborted.";
             throw new WeaveException(exMessage);
         }
@@ -241,25 +297,35 @@ public class MainWeaver {
         }
         retMainMethod.addModifier(Modifier.PUBLIC);
 
-        //Checks if the main methods have return types, transforms it to a class without return type
+        //Checks if the main methods have return types,
+        // transforms it to a class without return type
         //Return values will be saved in a field
-        String nameOfReturnFieldLeft = "retValueOf" + mainMethodLName + additionL;
-        //FieldDeclaration retFieldLeft = transformToVoid(leftMainClass, mainMethodL,nameOfReturnFieldLeft);
+        // String nameOfReturnFieldLeft =
+        //                "retValueOf" + mainMethodLName + additionL;
+        //FieldDeclaration retFieldLeft =
+        //                transformToVoid(leftMainClass, mainMethodL,
+        //                                nameOfReturnFieldLeft);
         MethodRule helper = new MethodRule();
         FieldDeclaration retFieldLeft = helper.removeReturn(mainMethodL);
         if(retFieldLeft != null) {
-            //retMainClass.addField(retFieldLeft.getElementType(), nameOfReturnFieldLeft, Modifier.PUBLIC);
+            //retMainClass.addField(retFieldLeft.getElementType(),
+            //                      nameOfReturnFieldLeft, Modifier.PUBLIC);
             addDeclarationToMainClass(retFieldLeft);
         }
-        String nameOfReturnFieldRight = "retValueOf" + mainMethodRName + additionR;
-        //FieldDeclaration retFieldRight = transformToVoid(rightMainClass, mainMethodR, nameOfReturnFieldRight);
+        // String nameOfReturnFieldRight =
+        //            "retValueOf" + mainMethodRName + additionR;
+        //FieldDeclaration retFieldRight =
+        //            transformToVoid(rightMainClass, mainMethodR,
+        //                            nameOfReturnFieldRight);
         FieldDeclaration retFieldRight = helper.removeReturn(mainMethodR);
         if(retFieldRight != null) {
-            //retMainClass.addField(retFieldRight.getElementType(), nameOfReturnFieldRight, Modifier.PUBLIC);
+            //retMainClass.addField(retFieldRight.getElementType(),
+            //                      nameOfReturnFieldRight, Modifier.PUBLIC);
             addDeclarationToMainClass(retFieldRight);
         }
 
-        //set the type to void, since all return values will be redirected to fields
+        //set the type to void, since all return values will be
+        // redirected to fields
         retMainMethod.setType(new VoidType());
         //Sets the name
         retMainMethod.setName(mainMethodLName + "_x_" + mainMethodRName);
@@ -269,7 +335,7 @@ public class MainWeaver {
         //gets the bodies
         BlockStmt bodyLeft = getBody(mainMethodL);
         BlockStmt bodyRight = getBody(mainMethodR);
-        //Call the weave function and add the main method to the return lass
+        //Call the weave function and add the main method to the return class
         retMainMethod.setBody(weave(bodyLeft.clone(), bodyRight.clone()));
         retMainClass.addMember(retMainMethod);
         return retCu;
@@ -282,7 +348,8 @@ public class MainWeaver {
      * @return  The result product code as BlockStmt
      * @throws WeaveException if there has been a problem with the annotations
      */
-    public BlockStmt weave(BlockStmt left, BlockStmt right) throws WeaveException {
+    public BlockStmt weave(BlockStmt left, BlockStmt right)
+            throws WeaveException {
         //The Block Stmt that will be modified and returned
         BlockStmt retBlock = new BlockStmt();
 
@@ -328,61 +395,107 @@ public class MainWeaver {
                     //reset the corresponding booleans
                     annoJustFinished = false;
                 }
-                //check if one of the current nodes has a weave annotation in its comment
+                //check if one of the current nodes has a weave annotation
+                // in its comment
                 leftAtAnnotation = hasWeaveAnnotation(currentLeft);
                 rightAtAnnotation = hasWeaveAnnotation(currentRight);
-                //make sure if there is one side at the start of the annotation,
+                //ensure if there is one side at the start of the annotation,
                 //the second will be too
                 boolean canCollectStatements = false;
 
                 if(leftAtAnnotation && rightAtAnnotation) {
-                    boolean sameLabel = getLabelOfAnno(currentLeft).equals(getLabelOfAnno(currentRight));
-                    boolean sameType = getTypeOfAnno(currentLeft).equals(getTypeOfAnno(currentRight));
+                    final String leftAnnoLabel =
+                            getLabelOfAnno(currentLeft);
+                    final String leftAnnoType =
+                            getTypeOfAnno(currentLeft);
+                    final String rightAnnoType =
+                            getTypeOfAnno(currentRight);
+                    final String rightAnnoLabel =
+                            getLabelOfAnno(currentRight);
+                    boolean sameLabel = leftAnnoLabel.equals(rightAnnoLabel);
+                    boolean sameType = leftAnnoType.equals(rightAnnoType);
                     canCollectStatements = sameLabel && sameType;
                 } else if(leftAtAnnotation) {
                     while(!rightAtAnnotation && rightHasNext) {
-                        //Add all statements in front of the annotation to the block
+                        //Add all statements in front of the
+                        // annotation to the block
                         retBlock.addStatement(currentRight);
                         currentRight = rightIterator.next();
                         rightHasNext = rightIterator.hasNext();
-                        //set it to true ONLY if both have the exact same annotation
+                        //set it to true ONLY if both have the
+                        // exact same annotation
                         if(hasWeaveAnnotation(currentRight)) {
-                            boolean sameLabel = getLabelOfAnno(currentLeft).equals(getLabelOfAnno(currentRight));
-                            boolean sameType = getTypeOfAnno(currentLeft).equals(getTypeOfAnno(currentRight));
+                            final String leftAnnoLabel =
+                                    getLabelOfAnno(currentLeft);
+                            final String leftAnnoType =
+                                    getTypeOfAnno(currentLeft);
+                            final String rightAnnoType =
+                                    getTypeOfAnno(currentRight);
+                            final String rightAnnoLabel =
+                                    getLabelOfAnno(currentRight);
+                            boolean sameLabel =
+                                    leftAnnoLabel.equals(rightAnnoLabel);
+                            boolean sameType =
+                                    leftAnnoType.equals(rightAnnoType);
                             rightAtAnnotation = sameLabel && sameType;
                         }
                     }
                     if(rightAtAnnotation) {
                         canCollectStatements = true;
                     } else {
-                        String anno = getTypeOfAnno(currentLeft) + " " + getLabelOfAnno(currentLeft);
-                        String exMessage = "2nd Annotation for " + anno + " not found.\nWeaving aborted.";
+                        final String leftAnnoLabel =
+                                getLabelOfAnno(currentLeft);
+                        final String leftAnnoType =
+                                getTypeOfAnno(currentLeft);
+                        String anno = leftAnnoType + " " + leftAnnoLabel;
+                        String exMessage =
+                                "2nd Annotation for " + anno
+                                + " not found.\nWeaving aborted.";
                         throw new WeaveException(exMessage);
                     }
 
                 } else if (rightAtAnnotation) {
                     while(!leftAtAnnotation && leftHasNext) {
-                        //Add all statements in front of the annotation to the block
+                        //Add all statements in front of the annotation
+                        // to the block
                         retBlock.addStatement(currentLeft);
                         currentLeft = leftIterator.next();
                         leftHasNext = leftIterator.hasNext();
                         if(hasWeaveAnnotation(currentRight)) {
-                            boolean sameLabel = getLabelOfAnno(currentLeft).equals(getLabelOfAnno(currentRight));
-                            boolean sameType = getTypeOfAnno(currentLeft).equals(getTypeOfAnno(currentRight));
+                            final String leftAnnoLabel =
+                                    getLabelOfAnno(currentLeft);
+                            final String leftAnnoType =
+                                    getTypeOfAnno(currentLeft);
+                            final String rightAnnoType =
+                                    getTypeOfAnno(currentRight);
+                            final String rightAnnoLabel =
+                                    getLabelOfAnno(currentRight);
+                            boolean sameLabel =
+                                    leftAnnoLabel.equals(rightAnnoLabel);
+                            boolean sameType =
+                                    leftAnnoType.equals(rightAnnoType);
                             leftAtAnnotation = sameLabel && sameType;
                         }
                     }
-                    if(leftAtAnnotation) {
+                    if (leftAtAnnotation) {
                         canCollectStatements = true;
                     } else {
-                        String anno = getTypeOfAnno(currentRight) + " " + getLabelOfAnno(currentRight);
-                        String exMessage = "2nd Annotation for " + anno + " not found.\nWeaving aborted.";
+                        final String rightAnnoLabel =
+                                getLabelOfAnno(currentRight);
+                        final String rightAnnoType =
+                                getTypeOfAnno(currentRight);
+                        String anno =
+                                rightAnnoType + " " + rightAnnoLabel;
+                        String exMessage =
+                                "2nd Annotation for " + anno
+                                + " not found.\nWeaving aborted.";
                         throw new WeaveException(exMessage);
                     }
 
                 }
                 if(canCollectStatements) {
-                    //At the start of both annotated areas, now collect all statements
+                    //At the start of both annotated areas,
+                    //now collect all statements
                     //Add start statements
                     String label = getLabelOfAnno(currentLeft);
                     removeAnnotation(currentLeft);
@@ -391,7 +504,7 @@ public class MainWeaver {
                     leftArea.addStatement(currentLeft);
                     BlockStmt rightArea = new BlockStmt();
                     rightArea.addStatement(currentRight);
-                    //Add all elements until the next annotation(excluding it)
+                    //Add all elements until the next annotation (excluding it)
                     //or the end of the code
                     leftHasNext = leftIterator.hasNext();
                     rightHasNext = rightIterator.hasNext();
@@ -400,7 +513,8 @@ public class MainWeaver {
                         currentLeft = leftIterator.next();
                         boolean isCorrectLabel = false;
                         if(hasWeaveAnnotation(currentLeft)) {
-                            isCorrectLabel = getLabelOfAnno(currentLeft).equals(label);
+                            isCorrectLabel =
+                                    getLabelOfAnno(currentLeft).equals(label);
                         } else {
                             leftArea.addStatement(currentLeft);
                             leftHasNext = leftIterator.hasNext();
@@ -415,7 +529,8 @@ public class MainWeaver {
                         currentRight = rightIterator.next();
                         boolean isCorrectLabel = false;
                         if(hasWeaveAnnotation(currentRight)) {
-                            isCorrectLabel = getLabelOfAnno(currentRight).equals(label);
+                            isCorrectLabel =
+                                    getLabelOfAnno(currentRight).equals(label);
                         } else {
                             rightArea.addStatement(currentRight);
                             rightHasNext = rightIterator.hasNext();
@@ -426,8 +541,10 @@ public class MainWeaver {
                         }
                     }
                     //weave them and add the result
-                    WeavingRule currentRule = weavingRules.get("AnnotationRule");
-                    for (Statement current : currentRule.weave(leftArea, rightArea)) {
+                    WeavingRule currentRule =
+                            weavingRules.get("AnnotationRule");
+                    for (Statement current:
+                            currentRule.weave(leftArea, rightArea)) {
                         retBlock.addStatement(current);
                     }
                     annoJustFinished = true;
@@ -436,32 +553,42 @@ public class MainWeaver {
                 //Because else it would cause unwanted behaviour
                 if(!annoJustFinished) {
                     //Check for which statements there is a weaving rule
-                    boolean leftHasRule = weavingRules.containsKey(currentLName);
-                    boolean rightHasRule = weavingRules.containsKey(currentRName);
+                    boolean leftHasRule =
+                            weavingRules.containsKey(currentLName);
+                    boolean rightHasRule =
+                            weavingRules.containsKey(currentRName);
                     if (leftHasRule && rightHasRule) {
-                        boolean leftHigher = priorityList.hasHigherPriority(currentLName, currentRName);
+                        boolean leftHigher =
+                                priorityList.hasHigherPriority(currentLName,
+                                                               currentRName);
                         //Check if the right statement has the same type
                         if(currentLName.equals(currentRName)) {
                             stopLeft = false;
                             stopRight = false;
                             //weave them and add the result
-                            WeavingRule currentRule = weavingRules.get(currentLName);
-                            LinkedList<Statement> allStmts = currentRule.weave(currentLeft, currentRight);
+                            WeavingRule currentRule =
+                                    weavingRules.get(currentLName);
+                            LinkedList<Statement> allStmts =
+                                    currentRule.weave(currentLeft,
+                                                      currentRight);
                             for (Statement current : allStmts) {
                                 retBlock.addStatement(current);
                             }
                         } else if(leftHigher) {
-                            //add the right rule and stop searching on the left side
+                            //add the right rule and stop searching on the
+                            //left side
                             stopLeft = true;
                             stopRight = false;
                             retBlock.addStatement(currentRight);
                         } else if(!leftHigher) {
-                            //add the left rule and stop searching on the right side
+                            //add the left rule and stop searching on the
+                            //right side
                             stopLeft = false;
                             stopRight = true;
                             retBlock.addStatement(currentLeft);
                         } else {
-                            //This case will happen if both rules aren't in the prio list
+                            //This case will happen if both rules are not
+                            //in the priority list.
                             //In this case the first rule to be found will be
                             //moved on with or if none was first, the left one
                             if(stopLeft) {
@@ -493,57 +620,67 @@ public class MainWeaver {
             } else if (leftHasNext) {
                 //No need for annotationhandling, since annotations will only
                 //block inside the first if-branch
-                //If left blocks but no more right elements, then remove block and add all
+                //If left blocks but no more right elements,
+                //then remove block and add all
                 if(stopLeft) {
                     stopLeft = false;
                     retBlock.addStatement(currentLeft);
                 }
                 currentLeft = leftIterator.next().clone();
                 currentLName = checkExpressionStmt(currentLeft);
-                //check for the case, that the right one still searches for a match
-                if(stopRight) {
+                //check for the case, that the right one still searches
+                // for a match
+                if (stopRight) {
                     //if they are the same type, weave them
-                    if(currentLName.equals(currentRName)) {
+                    if (currentLName.equals(currentRName)) {
                         stopLeft = false;
                         stopRight = false;
                         //weave them and add the result
-                        WeavingRule currentRule = weavingRules.get(currentLName);
-                        for (Statement current : currentRule.weave(currentLeft, currentRight)) {
+                        WeavingRule currentRule =
+                                weavingRules.get(currentLName);
+                        for (Statement current:
+                                currentRule.weave(currentLeft, currentRight)) {
                             retBlock.addStatement(current);
                         }
                     } else {
                         retBlock.addStatement(currentLeft);
                     }
                 } else {
-                    //no search ongoing, no more elements right, so add all remaining left
+                    //no search ongoing, no more elements right,
+                    //so add all remaining left
                     retBlock.addStatement(currentLeft);
                 }
             } else if (rightHasNext) {
                 //No need for annotationhandling, since annotations will only
                 //block inside the first if-branch
-                //If right blocks but no more left elements, then remove block and add all
+                //If right blocks but no more left elements,
+                //then remove block and add all
                 if(stopRight) {
                     stopRight = false;
                     retBlock.addStatement(currentRight);
                 }
                 currentRight = rightIterator.next().clone();
                 currentRName = checkExpressionStmt(currentRight);
-                //check for the case, that the left one still searches for a match
+                //check for the case that the left one still
+                //searches for a match
                 if(stopLeft) {
                     //if they are the same type, weave them
                     if(currentLName.equals(currentRName)) {
                         stopLeft = false;
                         stopRight = false;
                         //weave them and add the result
-                        WeavingRule currentRule = weavingRules.get(currentLName);
-                        for (Statement current : currentRule.weave(currentLeft, currentRight)) {
+                        WeavingRule currentRule =
+                                weavingRules.get(currentLName);
+                        for (Statement current:
+                                currentRule.weave(currentLeft, currentRight)) {
                             retBlock.addStatement(current);
                         }
                     } else {
                         retBlock.addStatement(currentRight);
                     }
                 } else {
-                    //no search ongoing, no more elements on the left, so add all remaining right
+                    //no search ongoing, no more elements on the left,
+                    //so add all remaining right
                     retBlock.addStatement(currentRight);
                 }
             }
@@ -565,8 +702,9 @@ public class MainWeaver {
     }
 
     /**
-     * Sets the type of methode weaving to be used.
-     * true means automated weaving(as with any other weaving rule, but has lowest priority)
+     * Sets the type of method weaving to be used.
+     * true means automated weaving(as with any other weaving rule,
+     * but has lowest priority)
      * false means only weave if annotated as such
      * @param in
      */
@@ -589,7 +727,8 @@ public class MainWeaver {
      */
     private void addImports(CompilationUnit target, CompilationUnit source) {
         for(ImportDeclaration current : source.getImports()) {
-            target.addImport(current.getNameAsString(), current.isStatic(), current.isAsterisk());
+            target.addImport(current.getNameAsString(), current.isStatic(),
+                             current.isAsterisk());
         }
     }
 
@@ -598,20 +737,22 @@ public class MainWeaver {
      * @param target
      * @param source
      */
-    private void addAllClasses(CompilationUnit target, CompilationUnit source) {
+    private void addAllClasses(CompilationUnit target,
+                               CompilationUnit source) {
         for(TypeDeclaration<?> current : source.getTypes()) {
             target.addType(current.clone());
         }
     }
 
     /**
-     * Returns the modifiers of a given class without public, private, protected.
-     * Checks for unsupported modifiers
+     * Returns the modifiers of a given class without
+     * public, private, protected. Checks for unsupported modifiers.
      * @param inputClass
      * @return  the modifiers
      */
-    private EnumSet<Modifier> checkModifiers(ClassOrInterfaceDeclaration inputClass)
-                                                            throws WeaveException{
+    private EnumSet<Modifier>
+                checkModifiers(ClassOrInterfaceDeclaration inputClass)
+                    throws WeaveException {
         EnumSet<Modifier> modifiers = inputClass.getModifiers().clone();
         if(inputClass.isPublic()) {
             modifiers.remove(Modifier.PUBLIC);
@@ -619,22 +760,23 @@ public class MainWeaver {
             modifiers.remove(Modifier.PRIVATE);
             modifiers.remove(Modifier.PROTECTED);
             System.out.println("The class " + inputClass.getNameAsString() +
-                    " is not public. The product class will be set to public.");
+                               " is not public. The product class will be" +
+                               " set to public.");
         }
         if(inputClass.isFinal()) {
             modifiers.remove(Modifier.FINAL);
             System.out.println("The class " + inputClass.getNameAsString() +
-                                  " is final. Final modifier will be removed.");
+                               " is final. Final modifier will be removed.");
         }
         if(modifiers.contains(Modifier.NATIVE)) {
             modifiers.remove(Modifier.NATIVE);
             System.out.println("The class " + inputClass.getNameAsString() +
-                                " is native. Native modifier will be removed.");
+                               " is native. Native modifier will be removed.");
         }
         //Gather all the found unsupported modifiers, then return these in the
         //exception message and throw it
         boolean throwException = false;
-        LinkedList<String> unsupportedModifiers = new LinkedList();
+        LinkedList<String> unsupportedModifiers = new LinkedList<String>();
         if(inputClass.isAbstract()) {
             throwException = true;
             unsupportedModifiers.add("abstract");
@@ -678,13 +820,14 @@ public class MainWeaver {
     }
 
     /**
-     * Returns the modifiers of a given method without public, private, protected.
-     * Checks for unsupported modifiers
+     * Returns the modifiers of a given method without
+     * public, private, protected. Checks for unsupported modifiers.
      * @param inputMethod
      * @return  the modifiers
      */
-    private EnumSet<Modifier> checkModifiers(MethodDeclaration inputMethod)
-                                                          throws WeaveException{
+    private EnumSet<Modifier>
+                checkModifiers(MethodDeclaration inputMethod)
+                    throws WeaveException {
         EnumSet<Modifier> modifiers = inputMethod.getModifiers().clone();
         if(inputMethod.isPublic()) {
             modifiers.remove(Modifier.PUBLIC);
@@ -692,7 +835,8 @@ public class MainWeaver {
             modifiers.remove(Modifier.PRIVATE);
             modifiers.remove(Modifier.PROTECTED);
             System.out.println("The method " + inputMethod.getNameAsString() +
-                    " is not public. The product method will be set to public.");
+                               " is not public. The product method will be" +
+                               " set to public.");
         }
         if(inputMethod.isStrictfp()) {
             modifiers.remove(Modifier.STRICTFP);
@@ -710,7 +854,7 @@ public class MainWeaver {
         //Gather all the found unsupported modifiers, then return these in the
         //exception message and throw it
         boolean throwException = false;
-        LinkedList<String> unsupportedModifiers = new LinkedList();
+        LinkedList<String> unsupportedModifiers = new LinkedList<String>();
         if(inputMethod.isAbstract()) {
             throwException = true;
             unsupportedModifiers.add("abstract");
@@ -746,19 +890,26 @@ public class MainWeaver {
     }
 
     /**
-     * Adds all members of the source class to the target except the specified method.
+     * Adds all members of the source class to the target except
+     * the specified method.
      * @param target
      * @param source
-     * @param nameWithAddition  The method to not add, with the correct modifier( that got added in the renaming process)
-     * @return  The main Method, null if the main method could not be found
+     * @param nameWithAddition
+     *          The method to not add, with the correct modifier
+     *          (that got added in the renaming process).
+     * @return  The main Method, null if the main method could not be found.
      */
-    private MethodDeclaration addMembersAndReturnMainMethod(ClassOrInterfaceDeclaration target, ClassOrInterfaceDeclaration source, String nameWithAddition) {
+    private MethodDeclaration
+            addMembersAndReturnMainMethod(ClassOrInterfaceDeclaration target,
+                                          ClassOrInterfaceDeclaration source,
+                                          String nameWithAddition) {
         NodeList<BodyDeclaration<?>> nodes = source.getMembers();
         MethodDeclaration mainMethod = null;
         for(BodyDeclaration<?> current : nodes) {
             if(!current.isMethodDeclaration()) {
                 target.addMember(current.clone());
-            } else if(!current.asMethodDeclaration().getName().toString().equals(nameWithAddition)) {
+            } else if(!current.asMethodDeclaration().getName().toString()
+                        .equals(nameWithAddition)) {
                 target.addMember(current.clone());
             } else {
                 mainMethod = current.asMethodDeclaration().clone();
@@ -769,26 +920,39 @@ public class MainWeaver {
     }
 
     /**
-     * Transforms the given method into a method without return value, adds a field to the given class
+     * Transforms the given method into a method without return value,
+     * adds a field to the given class.
      * @param inputMethod
      * @param nameOfField The name the returned field should have
-     * @return the declaration of the field that got added, null if method was already void
+     * @return the declaration of the field that got added,
+     *         null if method was already void
      */
-    private  FieldDeclaration transformToVoid(ClassOrInterfaceDeclaration correspondingClass, MethodDeclaration inputMethod, String nameOfField) {
+    private FieldDeclaration
+                transformToVoid(ClassOrInterfaceDeclaration correspondingClass,
+                                MethodDeclaration inputMethod,
+                                String nameOfField) {
         FieldDeclaration retField = null;
         Type type = inputMethod.getType();
         if (!type.isVoidType()) {
             //add return value to corresponding class
-            retField = correspondingClass.addField(type, nameOfField, Modifier.PUBLIC);
-            for(Statement current : inputMethod.getBody().get().getStatements()) {
+            retField =
+                    correspondingClass.addField(type, nameOfField,
+                                                Modifier.PUBLIC);
+            for(Statement current:
+                    inputMethod.getBody().get().getStatements()) {
                 if (current.isReturnStmt()) {
                     AssignExpr replacement = new AssignExpr();
                     replacement.setOperator(AssignExpr.Operator.ASSIGN);
-                    replacement.setTarget(retField.getVariable(0).getNameAsExpression());
-                    if(current.asReturnStmt().getExpression().isPresent()) {
-                        replacement.setValue(current.asReturnStmt().getExpression().get());
+                    final NameExpr target =
+                            retField.getVariable(0).getNameAsExpression();
+                    replacement.setTarget(target);
+                    Optional<Expression> returnExpr =
+                            current.asReturnStmt().getExpression();
+                    if(returnExpr.isPresent()) {
+                        replacement.setValue(returnExpr.get());
                     } else {
-                        //TODO Ausgabe von Exception, da vorausgesetzt wurde, das nur EIN return das ETWAS zurückgibt.
+                        //TODO Ausgabe von Exception, da vorausgesetzt wurde,
+                        //     dass nur EIN return das ETWAS zurückgibt.
                     }
                     current.replace(new ExpressionStmt(replacement));
                 }
@@ -802,7 +966,8 @@ public class MainWeaver {
      * @param target
      * @param source
      */
-    private void addParameters(MethodDeclaration target, MethodDeclaration source) {
+    private void addParameters(MethodDeclaration target,
+                               MethodDeclaration source) {
         //Sets the parameters
         for(Parameter current : source.getParameters()) {
             target.addParameter(current.clone());
@@ -823,21 +988,30 @@ public class MainWeaver {
     }
     /**
      * Collects all implemented WeavingRules for use in weave
-     * @return  A Map of all rules, where keys are the names and values the rule
-     * @throws IllegalAccessException   if a rule or its nullary constructor is not available
+     * @return A Map of all rules, where keys are the names and values the rule
+     * @throws IllegalAccessException   if a rule or its nullary constructor is
+     *                                  not available
      * @throws InstantiationException   if instantiation failed for a rule
+     * @throws SecurityException 
+     * @throws NoSuchMethodException 
+     * @throws InvocationTargetException 
+     * @throws IllegalArgumentException 
      */
     private HashMap<String, WeavingRule> getRules ()
-            throws IllegalAccessException, InstantiationException {
-        HashMap<String, WeavingRule> retMap = new HashMap();
+            throws IllegalAccessException, InstantiationException,
+                   IllegalArgumentException, InvocationTargetException,
+                   NoSuchMethodException, SecurityException {
+        HashMap<String, WeavingRule> retMap =
+                new HashMap<String, WeavingRule>();
         Reflections reflections = new Reflections(
                 ClasspathHelper.forPackage("ProductProgramCreator"),
                 new SubTypesScanner());
         Set<Class<? extends WeavingRule>> implementingClasses =
                 reflections.getSubTypesOf(WeavingRule.class);
-        LinkedList<WeavingRule> rules = new LinkedList();
-        for(Class current : implementingClasses) {
-            WeavingRule currentRule = (WeavingRule)current.newInstance();
+        // LinkedList<WeavingRule> rules = new LinkedList<WeavingRule>();
+        for(Class<?> current : implementingClasses) {
+            WeavingRule currentRule =
+                    (WeavingRule)current.getConstructor().newInstance();
             currentRule.addMainWeaver(this);
             retMap.put(currentRule.getName(), currentRule);
         }
@@ -845,8 +1019,8 @@ public class MainWeaver {
     }
 
     /**
-     * This method is used for determining which name the given statement should
-     * be given(for weaving purpose).
+     * This method is used for determining which name the given statement
+     * should be given (for weaving purpose).
      * It is also used to determine targets for method weaving.
      * @param stmt  The statement to check on
      * @return  'MethodCallExpr' if it is a method call expr, or does contain
@@ -885,15 +1059,17 @@ public class MainWeaver {
                 return "noWeave";
             } else {
                 //return regular name
-                return stmt.asExpressionStmt().getExpression().getMetaModel().toString();
+                final Expression stmtExpr =
+                        stmt.asExpressionStmt().getExpression();
+                return stmtExpr.getMetaModel().toString();
             }
         } else {
             return stmt.getMetaModel().toString();
         }
-    }
+    }    
 
     /**
-     * Checks wether the comments of a given statement start with '@weave'
+     * Checks whether the comments of a given statement start with '@weave'
      * @param in
      * @return  true if it starts with '@weave', false otherwise
      */
@@ -928,7 +1104,7 @@ public class MainWeaver {
     private String getAnnotationType(Statement in) {
         Optional<Comment> comment = in.getComment();
         if(comment.isPresent()) {
-            String comString = comment.get().getContent();
+            String comString = comment.get().getContent();    
             comString = comString.trim();
             comString = comString.substring(6, comString.indexOf(">"));
             return comString;
@@ -958,7 +1134,7 @@ public class MainWeaver {
      */
     public LinkedList<Statement> blockToList (BlockStmt input) {
         NodeList<Statement> nList = input.getStatements();
-        LinkedList<Statement> retList = new LinkedList();
+        LinkedList<Statement> retList = new LinkedList<Statement>();
         retList.addAll(nList);
         return retList;
     }
@@ -972,7 +1148,8 @@ public class MainWeaver {
     }
 
     /**
-     * Returns a list of names of all in either compilation unit declared methods.
+     * Returns a list of names of all in either compilation unit
+     * declared methods.
      * @return
      */
     public LinkedList<String> getAllDeclaredMethods() {
@@ -982,8 +1159,8 @@ public class MainWeaver {
     }
 
     /**
-     * Checks if the given statements has a '@methodWeave' annotation at the start
-     * of its comments.
+     * Checks if the given statements has a '@methodWeave' annotation at
+     * the start of its comments.
      * @param in    The statement to check on
      * @return  'true' if it has, 'false' otherwise
      */
@@ -1005,8 +1182,8 @@ public class MainWeaver {
      *          key and the MethodDeclaration as value.
      * @throws WeaveException if the method could not be found
      */
-    public HashMap<String, MethodDeclaration> getMethodAndClass (String methodName)
-                                                        throws WeaveException{
+    public HashMap<String, MethodDeclaration>
+            getMethodAndClass (String methodName) throws WeaveException {
         FindMethodVisitor visitor = new FindMethodVisitor (methodName);
         leftBackup.accept(visitor, new Object());
         if(!visitor.methodFound()) {
@@ -1015,13 +1192,15 @@ public class MainWeaver {
         if(visitor.methodFound()) {
             return visitor.getResults();
         } else {
-            throw new WeaveException("The method declaration of: " + methodName +
-                    " could not be found.\nWeaving aborted");
+            throw new WeaveException("The method declaration of: " +
+                                     methodName +
+                                     " could not be found.\nWeaving aborted");
         }
     }
 
     /**
-     * Adds a given fielddeclaration to the body of the main class of the product
+     * Adds a given field declaration to the body of the main class of
+     * the product.
      * @param toAdd
      */
     public void addDeclarationToMainClass(FieldDeclaration toAdd) {
@@ -1051,9 +1230,9 @@ public class MainWeaver {
     }
 
     /**
-     * Adds a given name to the list of methods that are declared inside this CU
-     * Is used for making sure, that a recursive method weaving does not loop
-     * endlessly.
+     * Adds a given name to the list of methods that are declared inside
+     * this CU. Is used for ensuring that a recursive method weaving does not
+     * loop endlessly.
      * @param name
      */
     public void addNameToMethodList(String name) {
@@ -1062,7 +1241,8 @@ public class MainWeaver {
 
     /**
      * Gets the type of an annotation on the given statement.
-     * Expects there to be an annotation. Will return an empty string otherwise.
+     * Expects there to be an annotation. Will return an empty
+     * string otherwise.
      * @param in the statement to check on
      * @return the type, an empty String if none could be found
      */
@@ -1077,7 +1257,8 @@ public class MainWeaver {
 
     /**
      * Gets the label of an annotation on the given statement.
-     * Expects there to be an annotation. Will return an empty string otherwise.
+     * Expects there to be an annotation. Will return an empty
+     * string otherwise.    
      * @param in the statement to check on
      * @return the label, an empty String if none could be found
      */
@@ -1085,7 +1266,8 @@ public class MainWeaver {
         String retLabel = "";
         if(hasWeaveAnnotation(in)) {
             retLabel = in.getComment().get().getContent().trim();
-            retLabel = retLabel.substring(retLabel.indexOf("["), retLabel.indexOf("]"));
+            retLabel = retLabel.substring(retLabel.indexOf("["),
+                                          retLabel.indexOf("]"));
         }
         return retLabel;
     }
